tests/build/fail/impl_ui_node/invalid_delegate_pair.stderr
error: expected `, delegate_mut: <expr>`
 --> $DIR/invalid_delegate_pair.rs:6:33
  |
6 | #[impl_ui_node(delegate = &self.inner)]
  |                                 ^^^^^

error: expected `, delegate: <expr>`
  --> $DIR/invalid_delegate_pair.rs:12:41
   |
12 | #[impl_ui_node(delegate_mut = &mut self.inner)]
   |                                         ^^^^^

warning: unused import: `UiNode`
 --> $DIR/invalid_delegate_pair.rs:1:46
  |
1 | use zero_ui::core::{impl_ui_node, NilUiNode, UiNode};
  |                                              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
